# diffusion-policy-manipulation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: protocol.md  research_question.md  threat_model.md
report/: experiment_log.md
scripts/: aggregate_results.py  eval_bc.py  eval_diffusion.py  plot_per_seed.py  plot_summary.py  record_dataset.py  reproduce_multiseed.py  smoke_bc.py  smoke_dataset.py  smoke_determinism.py  smoke_diffusion_sampler.py  smoke_diffusion_train_eval.py  smoke_execution_modes.py  smoke_multiseed.py  train_bc.py  train_diffusion.py  validate_results.py
src/diffusion_policy_manipulation/data/: __init__.py  dataset.py  normalizer.py
src/diffusion_policy_manipulation/envs/: __init__.py  make_env.py
src/diffusion_policy_manipulation/eval/: __init__.py  bc_evaluator.py  policy_wrappers.py  rollout_evaluator.py
src/diffusion_policy_manipulation/models/: __init__.py  diffusion_denoiser.py  diffusion_schedule.py  embeddings.py  mlp_bc.py  samplers.py
src/diffusion_policy_manipulation/train/: __init__.py  bc_losses.py  bc_trainer.py  diffusion_losses.py  diffusion_trainer.py
src/diffusion_policy_manipulation/utils/: __init__.py  seeding.py
tests/: test_import.py
